access to the endpoint that gets stats

--- a/src/veau-server/sass/style.scss
+++ b/src/veau-server/sass/style.scss
@@ -1,5 +1,6 @@
 @import '../../../node_modules/font-awesome/scss/font-awesome.scss';
 @import '../../../node_modules/bourbon-neat/core/_neat.scss';
+@import '../../../node_modules/handsontable/dist/handsontable.full.css';
 
 $neat-grid: (
   columns: 18,
