--- a/src/veau-server/sass/style.scss
+++ b/src/veau-server/sass/style.scss
@@ -1,4 +1,5 @@
-@import '../../../node_modules/font-awesome/scss/font-awesome.scss';
+@import '../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '../../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
 @import '../../../node_modules/bourbon-neat/core/_neat.scss';
 @import '../../../node_modules/handsontable/dist/handsontable.full.css';
 
