--- a/src/veau-server/sass/style.scss
+++ b/src/veau-server/sass/style.scss
@@ -34,6 +34,7 @@ $neat-grid: (
   margin-bottom: 8px;
 }
 
-.notification-icon {
-  padding-right: 8px;
+.icon-spacing {
+  margin-left: 8px;
+  margin-right: 8px;
 }
