--- a/src/veau-server/views/index.pug
+++ b/src/veau-server/views/index.pug
@@ -8,4 +8,4 @@ html
     link(rel='stylesheet', href='/css/style.css')
   body
     div#app
-    script(src='/js/app.js', type='text/javascript')
+    script(src='/js/app.js', type='application/javascript')
