--- a/src/veau-server/views/index.pug
+++ b/src/veau-server/views/index.pug
@@ -5,7 +5,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='robots', content='noindex, nofollow, noarchive')
-    link(rel='stylesheet', href='css/style.css')
+    link(rel='stylesheet', href='/css/style.css')
   body
     div#app
-    script(src='js/app.js', type='application/javascript')
+    script(src='/js/app.js', type='application/javascript')
