--- a/src/veau-server/views/index.pug
+++ b/src/veau-server/views/index.pug
@@ -4,8 +4,13 @@ html
     title Veau
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='robots', content='noindex, nofollow, noarchive')
     link(rel='stylesheet', href='/css/style.css')
   body
     div#app
     script(src='/js/app.js', type='application/javascript')
+    script(async src='https://www.googletagmanager.com/gtag/js?id=UA-139197813-1')
+    script
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-139197813-1');
