--- a/src/veau-server/views/index.pug
+++ b/src/veau-server/views/index.pug
@@ -9,7 +9,7 @@ html
     div#app
     script(src='/js/app.js', type='application/javascript')
     script(async src='https://www.googletagmanager.com/gtag/js?id=UA-139197813-1')
-    script
+    script.
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
