--- a/src/Server/views/index.pug
+++ b/src/Server/views/index.pug
@@ -1,15 +1,16 @@
 doctype html
 html
-  head
-    title Veau
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-  body
-    div#app
-    script(src='/js/app.js', type='application/javascript')
+    head
+        title Veau
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
+    body
+div#app
     script(async src='https://www.googletagmanager.com/gtag/js?id=UA-139197813-1')
     script.
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
       gtag('config', 'UA-139197813-1');
