--- a/src/Server/views/index.pug
+++ b/src/Server/views/index.pug
@@ -6,6 +6,7 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1')
     body
 div#app
+    script(src='/js/app.js', type='application/javascript')
     script(async src='https://www.googletagmanager.com/gtag/js?id=UA-139197813-1')
     script.
       window.dataLayer = window.dataLayer || [];
